--- a/src/Component3/Linkdin.css
+++ b/src/Component3/Linkdin.css
@@ -213,8 +213,8 @@ main{
         width: 300px;
     }
     .mg{
-        width: 220px;
-        margin: 25px;
+        width: 250px;
+        margin: 30px;
     }
     .mg5{
         width: 290px;
@@ -284,7 +284,13 @@ main{
     .hh{
         width: 220px;
         text-align: center;
+        margin: 0px;
+        padding: 0px;
        
+    }
+    #hw{
+       margin-left: 30px;
+       margin-right:-40px;
     }
     .p1{
         width: 220px;
